plugins {
    id 'eclipse'
    id 'idea'
    id 'maven-publish'
    id 'fabric-loom' version '1.2.7'
    id 'org.ajoberstar.grgit' version '5.2.0'
}

version = mod_version
group = mod_group_id

base {
    archivesName = mod_id
}

java.toolchain.languageVersion = JavaLanguageVersion.of(17)

println "Java: ${System.getProperty 'java.version'}, JVM: ${System.getProperty 'java.vm.version'} (${System.getProperty 'java.vendor'}), Arch: ${System.getProperty 'os.arch'}"

loom {
    runs {
        client {
            setConfigName("Fabric Client")
            ideConfigGenerated(true)
            runDir("run")
        }
        server {
            setConfigName("Fabric Server")
            ideConfigGenerated(true)
            runDir("run")
        }
        datagen {
            inherit server
            name "Data Generation"
            vmArg "-Dfabric-api.datagen"
            vmArg "-Dfabric-api.datagen.output-dir=${file("src/generated/resources")}"
            vmArg "-Dfabric-api.datagen.modid=${mod_id}"
            runDir "build/datagen"
        }
    }
}

sourceSets.main.resources { srcDir 'src/generated/resources' }

repositories {
    maven { url = "https://maven.createmod.net" }
    maven { url = "https://mvn.devos.one/releases" }
    maven { url = "https://mvn.devos.one/snapshots" }
    maven { url = "https://maven.jamieswhiteshirt.com/libs-release" }
    maven { url = "https://maven.tterrag.com" }
    maven { url = "https://raw.githubusercontent.com/Fuzss/modresources/main/maven/" }
    maven {
        name = "modmaven create"
        url = "https://modmaven.dev/"
    }

    maven {
        name = "CurseMaven"
        url = "https://cursemaven.com"
    }
    
    maven {
        name = "ParchmentMC"
        url = "https://maven.parchmentmc.org"
    }
}

dependencies {
    minecraft "com.mojang:minecraft:${minecraft_version}"
    mappings loom.officialMojangMappings()
    
    modImplementation "net.fabricmc:fabric-loader:${loader_version}"
    modImplementation "net.fabricmc.fabric-api:fabric-api:${fabric_version}"

    compileOnly 'org.projectlombok:lombok:1.18.32'
    annotationProcessor 'org.projectlombok:lombok:1.18.32'

    modImplementation("com.simibubi.create:create-fabric:${create_version}")
    modImplementation("dev.engine-room.flywheel:flywheel-fabric-${minecraft_version}")
    modImplementation("dev.engine-room.flywheel:flywheel-fabric-api-${minecraft_version}")
    modImplementation("com.tterrag.registrate_fabric:Registrate:${registrate_version}")
    modImplementation("net.createmod.ponder:Ponder-Fabric-${minecraft_version}:${ponder_version}")
    modImplementation("net.createmod.ponder:Ponder-Common-${minecraft_version}:${ponder_version}")
    modImplementation("fuzs.forgeconfigapiport:forgeconfigapiport-fabric")
    modImplementation("io.github.tropheusj:milk-lib")
    modImplementation("io.github.tropheusj:dripstone-fluid-lib")

    // MixinExtras
    compileOnly(annotationProcessor("io.github.llamalad7:mixinextras-common:0.3.5"))
    implementation("io.github.llamalad7:mixinextras-fabric:0.3.5") {
        exclude group: 'org.spongepowered', module: 'mixin'
    }

    annotationProcessor 'org.spongepowered:mixin:0.8.5:processor'

    // Fix better third person
    modCompileOnly("curse.maven:betterthirdperson-435044:4596768")
}

tasks.named('processResources', ProcessResources).configure {
    var replaceProperties = [
            minecraft_version   : minecraft_version, minecraft_version_range: minecraft_version_range,
            loader_version      : loader_version,
            mod_id              : mod_id, mod_name: mod_name, mod_license: mod_license, mod_version: mod_version,
            mod_authors         : mod_authors, mod_description: mod_description,
    ]
    inputs.properties replaceProperties

    filesMatching(['fabric.mod.json', 'pack.mcmeta']) {
        expand replaceProperties + [project: project]
    }
}

tasks.named('jar', Jar).configure {
    archiveClassifier = project.archive_classifier

    manifest {
        attributes([
                'Specification-Title'     : mod_id,
                'Specification-Vendor'    : mod_authors,
                'Specification-Version'   : '1',
                'Implementation-Title'    : project.name,
                'Implementation-Version'  : project.jar.archiveVersion,
                'Implementation-Vendor'   : mod_authors,
                'Implementation-Timestamp': new Date().format("yyyy-MM-dd'T'HH:mm:ssZ")
        ])
    }
}



tasks.withType(Jar).configureEach {
    archiveFileName = "${mod_id}-${version}-${archive_classifier}.jar"
}

publishing {
    publications {
        register('mavenJava', MavenPublication) {
            artifact jar
        }
    }
    repositories {
        maven {
            url "file://${project.projectDir}/mcmodsrepo"
        }
    }
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
}
